--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,6 +6,10 @@
 
 html{
     font-size: 62.5%;
+
+    @include responsive(phone){
+        width: 100%
+    }
 }
 
 body {
