--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -31,7 +31,7 @@
         float: left;
         -webkit-shape-outside: circle(50% at 50% 50%);
         shape-outside: circle(50% at 50% 50%);
-        margin-right: 40px;
+        margin-right: 4rem;
         position: relative;
     }
 
