--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -23,6 +23,9 @@
             font-size: 6.5rem;
             letter-spacing: 1rem;
             animation: fadeRight 2s;
+            @media(max-width:500px){
+                font-size: 5rem;
+            }
         }
         &-small{
             font-size: 3rem;
